.gitignore added, cleaning up

--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model GettingStartedWithAutoMappers.ViewModels.UserViewModel
+﻿@model AutoMapperDemo.ViewModels.UserViewModel
 
 @{
     ViewData["Title"] = "Index";
