--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using GettingStartedWithAutoMappers
-@using GettingStartedWithAutoMappers.Models
+﻿@using AutoMapperDemo
+@using AutoMapperDemo.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
